<resources>
    <string name="app_name">Tarneeb \"41\" List</string>
    <string name="action_settings">Settings</string>
    <string name="player_1_et">player 1</string>
    <string name="player_2_et">player 2</string>
    <string name="player_3_et">player 3</string>
    <string name="player_4_et">player 4</string>
    <string name="submit_btn">submit</string>
    <string name="enter_players_names">enter players names</string>
    <string name="reset">reset</string>
    <string name="toast_alert">you must enter all players names</string>
    <string name="add_points_error">you must enter all players points</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">You\'ll delete the round</string>
    <string name="dialog_title">Delete round?</string>
    <string name="delete_toast">the round has been deleted</string>
    <string name="back_names_message">You can\'t proceed without entering the names, do you wish to close the app</string>
    <string name="yes">yes</string>
    <string name="score">score</string>
    <string name="name">name</string>
    <string name="points">points</string>
    <string name="status">status</string>
    <string name="didn_t_pass">Failed</string>
    <string name="passed">Passed</string>
    <string name="wronge_item_press">you can\'t edit previous rounds</string>
    <string name="back_list_message">You will lose all your data, are you sure you want to exit?</string>
    <string name="add_round_title">Enter player requested points</string>
    <string name="banner_ad_unit_id_add_round" translatable="false">ca-app-pub-9875720541550980/5170486151</string>
    <string name="banner_ad_unit_id_conf_points" translatable="false">ca-app-pub-9875720541550980/6647219351</string>
    <string name="banner_ad_unit_id_enter_names" translatable="false">ca-app-pub-9875720541550980/9740286552</string>
    <string name="banner_ad_unit_id_list" translatable="false">ca-app-pub-9447754583671187/7960833150</string>
    <string name="title_activity_history">History</string>
    <string name="delete_game_title">Delete game?</string>
    <string name="delete_game_msg">You\'ll delete the game</string>
    <string name="clear_history_menu_item">Clear history</string>
    <string name="delete_all_games_msg">You\'ll delete all the games</string>
    <string name="delete_all_games_title">Delete all games?</string>
    <string name="about">About</string>
    <string name="app_version">Version</string>
    <string name="links">Links</string>
    <string name="rate_app">Rate this app on Google Play</string>
    <string name="send_feedback">Send feedback to developer</string>
    <string name="developers">Developer</string>
    <string name="samer">Samer Kina\'an</string>
    <string name="app_icon" translatable="false">app icon</string>
    <string name="empty_list">You have no games yet</string>
    <string name="conform_dialog_title">Conform who passed the round</string>
    <string name="open_new_game"><b>1.Open a new game</b>\nTo open a new game click the plus button in the up right corner.</string>
    <string name="add_plyrs_names"><b>2. Add players names</b>\nFill in the players names in the text fields and press submit.</string>
    <string name="add_round_tut1"><b>3. Add new round</b>\nYou can add each round by clicking the plus button in the bottom left corner of the screen.</string>
    <string name="add_round_tut2">After clicking the plus button you fill in each players bid next to there name and click submit.</string>
    <string name="con_round_tut1"><b>4. Conform round bids</b>\nYou can conform each players bid by clicking the check button in the bottom right corner of the screen.</string>
    <string name="con_round_tut2">After clicking the check button you can mark each player bid, if a player fails to achieve his bid make sure his checkbox is check, and if he was able to achieve his bid make sure his checkbox is unchecked and then press submit</string>
    <string name="delete_round_tut"><b>5. Delete round</b>\nIf you want to delete a round for some reason you can do that by clicking the desired round and then click delete in the bottom of the dialog box,
        if you want to delete the last round and it is still not conformed you can delete it by clicking the check button and then click delete in the bottom of the dialog box.</string>
    <string name="edit_round_tut"><b>6. Edit round</b>\nIf you made a mistake and you want to change it, you can click on the desired round and make your changes there</string>
    <string name="tutorial">Tutorial / Help</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="interstitial_ad" translatable="false">ca-app-pub-9875720541550980/2828256556</string>
    <string name="history__banner" translatable="false">ca-app-pub-9875720541550980/6861503350</string>
</resources>
