<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_title"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:layout_weight="1" />

            <TextView
                android:text="@string/points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/points_title"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:layout_weight="1" />

            <TextView
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:id="@+id/status_title"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textColor="@color/black"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/player1_name_cp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/primary_text" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player1_points_cp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/primary_text"
                android:inputType="number" />

            <CheckBox
                android:text="@string/passed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox1"
                android:checked="false"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:layout_weight="1"
                android:textColor="@color/primary_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player2_name_cp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/primary_text"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player2_points_cp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/primary_text"
                android:inputType="numberSigned" />

            <CheckBox
                android:text="@string/passed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2"
                android:checked="false"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:layout_weight="1"
                android:textColor="@color/primary_text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player3_name_cp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/primary_text"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player3_points_cp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/primary_text"
                android:inputType="numberSigned" />

            <CheckBox
                android:text="@string/passed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox3"
                android:checked="false"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:layout_weight="1"
                android:textColor="@color/primary_text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player4_name_cp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/primary_text"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player4_points_cp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/primary_text"
                android:inputType="numberSigned" />

            <CheckBox
                android:text="@string/passed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox4"
                android:checked="false"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:layout_weight="1"
                android:textColor="@color/primary_text"/>
        </TableRow>
    </TableLayout>
</LinearLayout>